tests/lifetime/loan/loan_pre_elab_errors.err.expected
error: at 20:5: [INIT-UseAfterMove] In function 'ref_transfer_source_reuse', block 'entry': variable 'x' is used after move
    |
 20 |     call sink(move x);
    |     ^^^^^^^^^^^^^^^^^
